# monitoring-assessment-v1

./: .env.example  .gitignore  Copy_of_SImple_LLM_Application_Tool_calling_openrouter_json_pydantic_weather_workflow.ipynb  DESIGN.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  project-plan.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  context.py  main.py
app/middleware/: __init__.py  correlation.py
app/observability/: __init__.py  logger.py  metrics.py
app/schemas/: ask.py  tools.py
app/services/: ai_engine.py  ticket_service.py
docs/: FuildAI_Assessment.postman_collection.json
observability/: prometheus.yml
observability/grafana/dashboards/: ai_service.json
observability/grafana/provisioning/dashboards/: dash.yml
tests/: test_api.py
